# patchmatch_inpainting

./: .gitignore  CMakeLists.txt  README.md  run.sh
image_files/inpainting/: prepare.py  py_wrapper.py
include/: defineall.h  structdef.h
man/man1/: patchmatch.1
source/: inpaint.cpp  main.cpp  qualitymesures.cpp
src/: inpaint.cpp  main.cpp  main_simple.cpp  maskedimage.cpp  nearestneighborfield.cpp  qualitymesures.cpp
